--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
         #downloadBtn:hover {
             background-color: #0056b3;
         }
+        .result-block {
+    margin-bottom: 10px; /* Espaçamento entre os blocos */
+    padding: 10px; /* Espaçamento interno */
+    border: 1px solid #ccc; /* Borda opcional */
+    border-radius: 5px; /* Bordas arredondadas */
+    background-color: #f9f9f9; /* Cor de fundo */
+}
+
     </style>
 </head>
 <body>
@@ -154,12 +162,31 @@
     </form>
 
     <h2>Resultados:</h2>
+
+<div class="result-block">
     <p id="cutsResult">Número de Cortes: </p>
+</div>
+
+<div class="result-block">
     <p id="turnsResult">Número de Voltas: </p>
+</div>
+
+<div class="result-block">
     <p id="cutAmountResult">Quantidade Cortada: </p>
+</div>
+
+<div class="result-block">
     <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+</div>
+
+<div class="result-block">
     <p id="cyclesResult">Número de Carrossel: </p>
+</div>
+
+<div class="result-block">
     <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+</div>
+
 
     <table id="recordsTable">
         <thead>
