--- a/index.html
+++ b/index.html
@@ -167,31 +167,34 @@
         <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
-    <h2>Resultados:</h2>
+   <h2>Resultados:</h2>
 
-<div class="result-block">
-    <p id="cutsResult">Número de Cortes: </p>
+<div class="results-container">
+    <div class="result-block">
+        <p id="cutsResult">Número de Cortes: </p>
+    </div>
+
+    <div class="result-block">
+        <p id="turnsResult">Número de Voltas: </p>
+    </div>
+
+    <div class="result-block">
+        <p id="cutAmountResult">Quantidade Cortada: </p>
+    </div>
+
+    <div class="result-block">
+        <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+    </div>
+
+    <div class="result-block">
+        <p id="cyclesResult">Número de Carrossel: </p>
+    </div>
+
+    <div class="result-block">
+        <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+    </div>
 </div>
 
-<div class="result-block">
-    <p id="turnsResult">Número de Voltas: </p>
-</div>
-
-<div class="result-block">
-    <p id="cutAmountResult">Quantidade Cortada: </p>
-</div>
-
-<div class="result-block">
-    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-</div>
-
-<div class="result-block">
-    <p id="cyclesResult">Número de Carrossel: </p>
-</div>
-
-<div class="result-block">
-    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
-</div>
 
 
     <table id="recordsTable">
