--- a/index.html
+++ b/index.html
@@ -116,7 +116,19 @@
     border: 1px solid #ccc; /* Borda opcional */
     border-radius: 5px; /* Bordas arredondadas */
     background-color: #f9f9f9; /* Cor de fundo */
+    font-size: 1.2em; /* Aumenta o tamanho da fonte */
+    font-weight: bold; /* Texto em negrito */
 }
+
+/* Cores discretas para os blocos */
+.result-block:nth-child(odd) {
+    background-color: #e0f7fa; /* Azul claro */
+}
+
+.result-block:nth-child(even) {
+    background-color: #ffe0b2; /* Laranja claro */
+}
+
 
 
     </style>
