--- a/index.html
+++ b/index.html
@@ -115,18 +115,33 @@
     padding: 10px; /* Espaçamento interno */
     border: 1px solid #ccc; /* Borda opcional */
     border-radius: 5px; /* Bordas arredondadas */
-    background-color: #f9f9f9; /* Cor de fundo */
     font-size: 1.2em; /* Aumenta o tamanho da fonte */
     font-weight: bold; /* Texto em negrito */
 }
 
-/* Cores discretas para os blocos */
-.result-block:nth-child(odd) {
+/* Definindo cores diferentes para cada bloco */
+.color1 {
     background-color: #e0f7fa; /* Azul claro */
 }
 
-.result-block:nth-child(even) {
+.color2 {
     background-color: #ffe0b2; /* Laranja claro */
+}
+
+.color3 {
+    background-color: #d1c4e9; /* Lilás claro */
+}
+
+.color4 {
+    background-color: #c8e6c9; /* Verde claro */
+}
+
+.color5 {
+    background-color: #ffccbc; /* Coral claro */
+}
+
+.color6 {
+    background-color: #ffe4e1; /* Rosa claro */
 }
 
 
