--- a/index.html
+++ b/index.html
@@ -197,30 +197,31 @@
    <h2>Resultados:</h2>
 
 <div class="results-container">
-    <div class="result-block">
+    <div class="result-block color1">
         <p id="cutsResult">Número de Cortes: </p>
     </div>
 
-    <div class="result-block">
+    <div class="result-block color2">
         <p id="turnsResult">Número de Voltas: </p>
     </div>
 
-    <div class="result-block">
+    <div class="result-block color3">
         <p id="cutAmountResult">Quantidade Cortada: </p>
     </div>
 
-    <div class="result-block">
+    <div class="result-block color4">
         <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
     </div>
 
-    <div class="result-block">
+    <div class="result-block color5">
         <p id="cyclesResult">Número de Carrossel: </p>
     </div>
 
-    <div class="result-block">
+    <div class="result-block color6">
         <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
     </div>
 </div>
+
 
 
 
