--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     // Cálculo do Restante de Voltas para Fechar a OP
     const fractionalPart = numCycles - Math.floor(numCycles); // Parte fracionária do número de ciclos
-    const remainingTurns = Math.floor(numTurns * fractionalPart);
+    const remainingTurns = Math.ceil(numTurns * fractionalPart);
     document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
     // Cálculo da Quantidade Total Cortada
