--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
         <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
         <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
+        <button id="machine4" class="machine-btn inactive" onclick="toggleMachine(4)">CL-04</button>
     </div>
 
     <form id="productionForm">
