--- a/index.html
+++ b/index.html
@@ -5,7 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Produção de OP</title>
     <style>
-       /* Estilos permanecem os mesmos */
+       body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        h1 {
+            color: #4CAF50;
+            text-align: center;
+        }
+        .input-group {
+            margin-bottom: 10px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input[type="number"],
+        input[type="text"],
+        select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-right: 5px;
+            margin-top: 10px;
+        }
+        .machine-btn {
+            width: 150px;
+            height: 50px;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+        .machine-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .active {
+            background-color: red;
+        }
+        .inactive {
+            background-color: green;
+        }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
+            background-color: #45a049;
+        }
+        .result-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        .result {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 15px;
+            margin: 5px;
+            flex: 1 1 calc(30% - 10px);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #4CAF50;
+            color: white;
+        }
+        h2 {
+            margin-top: 30px;
+            text-align: center;
+        }
+        #downloadBtn {
+            background-color: #007BFF;
+            margin-top: 20px;
+        }
+        #downloadBtn:hover {
+            background-color: #0056b3;
+        }
+       .results-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Cria duas colunas de igual largura */
+    gap: 10px; /* Espaçamento entre os blocos */
+}
+
+.result-block {
+    padding: 10px; /* Espaçamento interno */
+    border: 1px solid #ccc; /* Borda opcional */
+    border-radius: 5px; /* Bordas arredondadas */
+    font-size: 1.2em; /* Aumenta o tamanho da fonte */
+    font-weight: bold; /* Texto em negrito */
+}
+
+/* Definindo cores diferentes para cada bloco */
+.color1 {
+    background-color: #e0f7fa; /* Azul claro */
+}
+
+.color2 {
+    background-color: #ffe0b2; /* Laranja claro */
+}
+
+.color3 {
+    background-color: #d1c4e9; /* Lilás claro */
+}
+
+.color4 {
+    background-color: #c8e6c9; /* Verde claro */
+}
+
+.color5 {
+    background-color: #ffccbc; /* Coral claro */
+}
+
+.color6 {
+    background-color: #ffe4e1; /* Rosa claro */
+}
+
+
+
     </style>
 </head>
 <body>
@@ -19,14 +159,72 @@
     </div>
 
     <form id="productionForm">
-        <!-- Inputs para número da OP, código do componente, quantidade, etc. -->
+        <div class="input-group">
+            <label for="opNumber">Número da OP:</label>
+            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
+        </div>
+        <div class="input-group">
+            <label for="componentCode">Código do Componente:</label>
+            <input type="text" id="componentCode" required>
+        </div>
+        <div class="input-group">
+            <label for="opQuantity">Quantidade da OP:</label>
+            <input type="number" id="opQuantity" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="opLength">Comprimento da OP (cm):</label>
+            <input type="number" id="opLength" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="fabricType">Tipo de Tecido:</label>
+            <select id="fabricType" required>
+                <option value="">Selecione</option>
+                <option value="Plano">Plano</option>
+                <option value="Tubular">Tubular</option>
+                <option value="PATCH">PATCH</option>
+            </select>
+        </div>
+        <div class="input-group">
+            <label for="opWeight">Gramatura da OP:</label>
+            <input type="number" id="opWeight" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+            <input type="number" id="piecesRemoved" min="0" required>
+        </div>
+        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
-    <h2>Resultados:</h2>
+   <h2>Resultados:</h2>
 
-    <div class="results-container">
-        <!-- Resultados como Número de Cortes, Voltas, etc. -->
+<div class="results-container">
+    <div class="result-block color1">
+        <p id="cutsResult">Número de Cortes: </p>
     </div>
+
+    <div class="result-block color2">
+        <p id="turnsResult">Número de Voltas: </p>
+    </div>
+
+    <div class="result-block color3">
+        <p id="cutAmountResult">Quantidade Cortada: </p>
+    </div>
+
+    <div class="result-block color4">
+        <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+    </div>
+
+    <div class="result-block color5">
+        <p id="cyclesResult">Número de Carrossel: </p>
+    </div>
+
+    <div class="result-block color6">
+        <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+    </div>
+</div>
+
+
+
 
     <table id="recordsTable">
         <thead>
@@ -52,59 +250,139 @@
 
         function toggleMachine(machineNumber) {
             const button = document.getElementById(`machine${machineNumber}`);
-            button.classList.toggle('active');
-            button.classList.toggle('inactive');
+            if (button.classList.contains('inactive')) {
+                button.classList.remove('inactive');
+                button.classList.add('active');
+            } else {
+                button.classList.remove('active');
+                button.classList.add('inactive');
+            }
+        }
+
+        function getActiveMachinesCount() {
+            let count = 0;
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                if (button.classList.contains('active')) {
+                    count++;
+                }
+            }
+            return count;
+        }
+
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
         }
 
         function calculateAndSave() {
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
-            const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const fabricType = document.getElementById('fabricType').value;
+    const opNumber = document.getElementById('opNumber').value;
+    const componentCode = document.getElementById('componentCode').value;
+    const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+    const opLength = parseFloat(document.getElementById('opLength').value);
+    const fabricType = document.getElementById('fabricType').value;
+    const opWeight = parseFloat(document.getElementById('opWeight').value);
+    const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
 
-            if (isNaN(opQuantity) || isNaN(opLength) || isNaN(opWeight) || !fabricType) {
-                alert('Por favor, preencha todos os campos corretamente.');
-                return;
-            }
+    if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
+        alert('Por favor, preencha todos os campos corretamente.');
+        return;
+    }
 
-            const maxCarouselLength = 540;
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+    const maxCarouselLength = 540;
 
-            let numTurns = 0;
+    // Cálculo do Número de Cortes
+    const numCuts = Math.floor(maxCarouselLength / opLength);
+    document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
 
-            // Lógica para o cálculo do número de voltas conforme o tipo de tecido
-            if (fabricType === 'Plano') {
-                numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
-            } else if (fabricType === 'Tubular') {
-                numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
-            } else if (fabricType === 'PATCH') {
-                numTurns = 25; // Valor fixo
-            }
+    // Cálculo do Número de Voltas
+    let numTurns = 0;
 
-            // Regra nova: Verificar se número de voltas vezes número de cortes é maior que a quantidade da OP
-            const calculatedAmount = numTurns * numCuts;
+    if (fabricType === 'Plano') {
+        numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
+    } else if (fabricType === 'Tubular') {
+        numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
+    } else if (fabricType === 'PATCH') {
+        numTurns = 25; // Valor fixo para PET
+    }
 
-            if (calculatedAmount > opQuantity) {
-                // Ajustar o número de voltas se o cálculo exceder a quantidade da OP
-                numTurns = Math.floor(opQuantity / numCuts);
-            }
+    document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+    // Cálculo da Quantidade Cortada
+    const cutAmount = Math.floor(numCuts * numTurns); // Arredondando para menor
+    document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
 
-            // Continuando os cálculos conforme o código original
-            const cutAmount = Math.floor(numCuts * numTurns);
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+    // Cálculo do Número de Ciclos (mantendo a fórmula original)
+    const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0; // Verificação para evitar divisão por zero
+    document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
 
-            const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+    // Cálculo do Restante de Voltas para Fechar a OP
+    const fractionalPart = numCycles - Math.floor(numCycles); // Parte fracionária do número de ciclos
+    const remainingTurns = Math.ceil(numTurns * fractionalPart);
+    document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
-            const fractionalPart = numCycles - Math.floor(numCycles);
-            const remainingTurns = Math.ceil(numTurns * fractionalPart);
-            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+    // Cálculo da Quantidade Total Cortada
+    const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts); // Corrigido
+    document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
-            const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+    // Atualizando a tabela com o novo registro
+    const newRecord = {
+        dateTime: new Date().toLocaleString(),
+        activeMachines: getActiveMachinesCount(),
+        opNumber: opNumber,
+        componentCode: componentCode,
+        opQuantity: opQuantity,
+        opLength: opLength,
+        fabricType: fabricType,
+        opWeight: opWeight,
+        piecesRemoved: piecesRemoved
+    };
+
+    records.push(newRecord);
+    updateTable();
+}
+
+
+        function updateTable() {
+            const tbody = document.querySelector('#recordsTable tbody');
+            tbody.innerHTML = '';
+
+            records.forEach(record => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${record.dateTime}</td>
+                    <td>${record.activeMachines}</td>
+                    <td>${record.opNumber}</td>
+                    <td>${record.componentCode}</td>
+                    <td>${record.opQuantity}</td>
+                    <td>${record.opLength}</td>
+                    <td>${record.fabricType}</td>
+                    <td>${record.opWeight}</td>
+                    <td>${record.piecesRemoved}</td>
+                `;
+                tbody.appendChild(row);
+            });
+        }
+
+        function downloadCSV() {
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+
+            records.forEach(record => {
+                const row = `${record.dateTime},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}`;
+                csvContent += row + "\n";
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement('a');
+            link.setAttribute('href', encodedUri);
+            link.setAttribute('download', 'registro_producao.csv');
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
         }
     </script>
 </body>
