--- a/index.html
+++ b/index.html
@@ -246,87 +246,64 @@
     <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
-        let records = [];
+                let records = [];
 
         function toggleMachine(machineNumber) {
             const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
-            }
-        }
-
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
+            button.classList.toggle('active');
+            button.classList.toggle('inactive');
         }
 
         function calculateAndSave() {
-    const opNumber = document.getElementById('opNumber').value;
-    const componentCode = document.getElementById('componentCode').value;
-    const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-    const opLength = parseFloat(document.getElementById('opLength').value);
-    const fabricType = document.getElementById('fabricType').value;
-    const opWeight = parseFloat(document.getElementById('opWeight').value);
-    const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+            const opLength = parseFloat(document.getElementById('opLength').value);
+            const opWeight = parseFloat(document.getElementById('opWeight').value);
+            const fabricType = document.getElementById('fabricType').value;
 
-    if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-        alert('Por favor, preencha todos os campos corretamente.');
-        return;
-    }
+            if (isNaN(opQuantity) || isNaN(opLength) || isNaN(opWeight) || !fabricType) {
+                alert('Por favor, preencha todos os campos corretamente.');
+                return;
+            }
 
-    const maxCarouselLength = 540;
+            const maxCarouselLength = 540;
+            const numCuts = Math.floor(maxCarouselLength / opLength);
+            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
 
-    // Cálculo do Número de Cortes
-    const numCuts = Math.floor(maxCarouselLength / opLength);
-    document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+            let numTurns = 0;
 
-    // Cálculo do Número de Voltas
-    let numTurns = 0;
+            // Lógica para o cálculo do número de voltas conforme o tipo de tecido
+            if (fabricType === 'Plano') {
+                numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
+            } else if (fabricType === 'Tubular') {
+                numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
+            } else if (fabricType === 'PATCH') {
+                numTurns = 25; // Valor fixo
+            }
 
-    if (fabricType === 'Plano') {
-        numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
-    } else if (fabricType === 'Tubular') {
-        numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
-    } else if (fabricType === 'PATCH') {
-        numTurns = 25; // Valor fixo para PET
-    }
+            // Regra nova: Verificar se número de voltas vezes número de cortes é maior que a quantidade da OP
+            const calculatedAmount = numTurns * numCuts;
 
-    document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+            if (calculatedAmount > opQuantity) {
+                // Ajustar o número de voltas se o cálculo exceder a quantidade da OP
+                numTurns = Math.floor(opQuantity / numCuts);
+            }
 
-    // Cálculo da Quantidade Cortada
-    const cutAmount = Math.floor(numCuts * numTurns); // Arredondando para menor
-    document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
-    // Cálculo do Número de Ciclos (mantendo a fórmula original)
-    const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0; // Verificação para evitar divisão por zero
-    document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+            // Continuando os cálculos conforme o código original
+            const cutAmount = Math.floor(numCuts * numTurns);
+            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
 
-    // Cálculo do Restante de Voltas para Fechar a OP
-    const fractionalPart = numCycles - Math.floor(numCycles); // Parte fracionária do número de ciclos
-    const remainingTurns = Math.ceil(numTurns * fractionalPart);
-    document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+            const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
 
-    // Cálculo da Quantidade Total Cortada
-    const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts); // Corrigido
-    document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            const fractionalPart = numCycles - Math.floor(numCycles);
+            const remainingTurns = Math.ceil(numTurns * fractionalPart);
+            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+
+            const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
+            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+        }
 
     // Atualizando a tabela com o novo registro
     const newRecord = {
