--- a/index.html
+++ b/index.html
@@ -246,64 +246,93 @@
     <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
-                let records = [];
+        let records = [];
 
         function toggleMachine(machineNumber) {
             const button = document.getElementById(`machine${machineNumber}`);
-            button.classList.toggle('active');
-            button.classList.toggle('inactive');
+            if (button.classList.contains('inactive')) {
+                button.classList.remove('inactive');
+                button.classList.add('active');
+            } else {
+                button.classList.remove('active');
+                button.classList.add('inactive');
+            }
         }
 
-        function calculateAndSave() {
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
-            const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const fabricType = document.getElementById('fabricType').value;
-
-            if (isNaN(opQuantity) || isNaN(opLength) || isNaN(opWeight) || !fabricType) {
-                alert('Por favor, preencha todos os campos corretamente.');
-                return;
+        function getActiveMachinesCount() {
+            let count = 0;
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                if (button.classList.contains('active')) {
+                    count++;
+                }
             }
-
-            const maxCarouselLength = 540;
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
-
-            let numTurns = 0;
-
-            // Lógica para o cálculo do número de voltas conforme o tipo de tecido
-            if (fabricType === 'Plano') {
-                numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
-            } else if (fabricType === 'Tubular') {
-                numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
-            } else if (fabricType === 'PATCH') {
-                numTurns = 25; // Valor fixo
-            }
-
-            // Regra nova: Verificar se número de voltas vezes número de cortes é maior que a quantidade da OP
-            const calculatedAmount = numTurns * numCuts;
-
-            if (calculatedAmount > opQuantity) {
-                // Ajustar o número de voltas se o cálculo exceder a quantidade da OP
-                numTurns = Math.floor(opQuantity / numCuts);
-            }
-
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
-
-            // Continuando os cálculos conforme o código original
-            const cutAmount = Math.floor(numCuts * numTurns);
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
-
-            const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
-
-            const fractionalPart = numCycles - Math.floor(numCycles);
-            const remainingTurns = Math.ceil(numTurns * fractionalPart);
-            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
-
-            const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            return count;
         }
+
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
+        }
+
+       function calculateAndSave() {
+    const opNumber = document.getElementById('opNumber').value;
+    const componentCode = document.getElementById('componentCode').value;
+    const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+    const opLength = parseFloat(document.getElementById('opLength').value);
+    const fabricType = document.getElementById('fabricType').value;
+    const opWeight = parseFloat(document.getElementById('opWeight').value);
+    const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+    if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
+        alert('Por favor, preencha todos os campos corretamente.');
+        return;
+    }
+
+    const maxCarouselLength = 540;
+
+    // Cálculo do Número de Cortes
+    const numCuts = Math.floor(maxCarouselLength / opLength);
+    document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+
+    // Cálculo do Número de Voltas
+    let numTurns = 0;
+
+    if (fabricType === 'Plano') {
+        numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
+    } else if (fabricType === 'Tubular') {
+        numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
+    } else if (fabricType === 'PATCH') {
+        numTurns = 25; // Valor fixo para PATCH
+    }
+
+    // Verificação da regra de substituição de Voltas
+    const totalCuts = numTurns * numCuts; // Número total de cortes baseado em voltas e cortes
+    if (totalCuts > opQuantity) {
+        numTurns = Math.floor(opQuantity / numCuts); // Ajusta o número de voltas
+    }
+
+    document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+
+    // Cálculo da Quantidade Cortada
+    const cutAmount = Math.floor(numCuts * numTurns);
+    document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+
+    // Cálculo do Número de Ciclos
+    const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
+    document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+
+    // Cálculo do Restante de Voltas para Fechar a OP
+    const fractionalPart = numCycles - Math.floor(numCycles);
+    const remainingTurns = Math.ceil(numTurns * fractionalPart);
+    document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+
+    // Cálculo da Quantidade Total Cortada
+    const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
+    document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
     // Atualizando a tabela com o novo registro
     const newRecord = {
