--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 <div class="results-container">
     <div class="result-block color1">
-        <p id="cutsResult">Número de Cortes: </p>
+        <p id="cutsResult">Número de Cortes na mesa: </p>
     </div>
 
     <div class="result-block color2">
