--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </div>
 
     <div class="result-block color2">
-        <p id="turnsResult">Número de Voltas: </p>
+        <p id="turnsResult">Número de Voltas Carrossel: </p>
     </div>
     
     <div class="result-block color5">
@@ -215,7 +215,7 @@
     </div>
 
     <div class="result-block color3">
-        <p id="cutAmountResult">Quantidade Cortada: </p>
+        <p id="cutAmountResult">Quantidade Cortada por Carrossel: </p>
     </div>
 
     <div class="result-block color4">
