--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <label for="opWeight">Gramatura da OP:</label>
             <input type="number" id="opWeight" min="0" required>
         </div>
-    
+     </div>
         <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
